# cover-jobby

./: .gitignore  CHANGELOG.md  README.md  example_book_list.csv  pyproject.toml
cover_jobby/: __init__.py  cover_jobby.py
